--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
   color: rgb(63, 64, 71);
   text-transform: uppercase;
   /* border-radius: 30px; */
+  font-size: 22px;
 }
 
 #container {
@@ -105,4 +106,54 @@ button:nth-child(16) {
 button:nth-child(20) {
   font-size: 20px;
   background-color: #5cb9c5;
+}
+
+/* Responsive CSS  */
+/* Untuk Tablet*/
+@media all and (max-width: 1000px) {
+  #container {
+    width: 80%;
+    height: auto;
+    /* font-size: 15px; */
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  #calculator {
+    padding: 0 5px;
+    width: 55%;
+    display: grid;
+  }
+
+  #container {
+    width: 100%;
+    height: 30px;
+    font-size: 22px;
+  }
+}
+
+/* Untuk Smartphone */
+@media screen and (max-width: 680px) {
+  #container {
+    display: inline-table;
+    width: 100%;
+    /* font-size: 50px; */
+  }
+
+  /* #keyboard {
+    text-align: left;
+  } */
+}
+
+@media screen and (max-width: 170px) {
+  #container {
+    display: inline-table;
+    width: 100%;
+  }
+
+  #calculator {
+    padding: 0 5px;
+    width: 55%;
+  }
 }
